--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -15,12 +15,15 @@
 
 logging:
   level:
-    ROOT: DEBUG
+    ROOT: INFO
     tech.jhipster: DEBUG
     org.hibernate.SQL: DEBUG
     com.nndmove.app: DEBUG
 
 spring:
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
   devtools:
     restart:
       enabled: true
@@ -32,9 +35,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/jhipster
-    username: jhipster
-    password:
+    url: jdbc:postgresql://ep-tight-pond-a1243jsz-pooler.ap-southeast-1.aws.neon.tech/movieDB
+    username: movie_owner
+    password: 0nk6dCKAJNPt
     hikari:
       poolName: Hikari
       auto-commit: false
@@ -64,10 +67,10 @@ jhipster:
   cache: # Cache configuration
     redis: # Redis configuration
       expiration: 3600 # By default objects stay 1 hour (in seconds) in the cache
-      server: redis://localhost:6379
+      server: redis://default:i9hTGGeRC6syELvWTujcwQxM938vLAIP@redis-14541.c322.us-east-1-2.ec2.cloud.redislabs.com:14541
       cluster: false
-      # server: redis://localhost:6379,redis://localhost:16379,redis://localhost:26379
-      # cluster: true
+    # server: redis://localhost:6379,redis://localhost:16379,redis://localhost:26379
+    # cluster: true
   # CORS is only enabled by default with the "dev" profile
   cors:
     # Allow Ionic for JHipster by default (* no longer allowed in Spring Boot 2.4+)
