add dto gen, error! on DTO //TODO: fix DTO and Mapper

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -19,6 +19,7 @@ logging:
     tech.jhipster: DEBUG
     org.hibernate.SQL: DEBUG
     com.nndmove.app: DEBUG
+    org.springframework.cache: DEBUG
 
 spring:
   jpa:
