regen by jhipster remove redis

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -6,14 +6,14 @@
     "baseName": "jhipster",
     "blueprints": [],
     "buildTool": "maven",
-    "cacheProvider": "redis",
+    "cacheProvider": "ehcache",
     "clientFramework": "vue",
     "clientPackageManager": "npm",
     "creationTimestamp": 1712005258642,
     "databaseType": "sql",
     "devDatabaseType": "postgresql",
     "devServerPort": 9060,
-    "enableHibernateCache": true,
+    "enableHibernateCache": false,
     "enableSwaggerCodegen": true,
     "enableTranslation": false,
     "entities": ["User", "Premium", "Payment", "Movie", "Genres", "MovieGenres", "MovieResource", "History", "Playlist"],
