--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -24,6 +24,9 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+  threads:
+    virtual:
+      enabled: true
   devtools:
     restart:
       enabled: true
